@@ -16,13 +16,11 @@
 
 package com.badlogic.gdx.backends.android;
 
-import android.annotation.TargetApi;
 import android.opengl.GLES30;
 
 import com.badlogic.gdx.graphics.GL30;
 import com.badlogic.gdx.utils.GdxRuntimeException;
 
-@TargetApi(18)
 public class AndroidGL30 extends AndroidGL20 implements GL30 {
 	@Override
 	public void glReadBuffer (int mode) {
