@@ -17,7 +17,6 @@ import javax.microedition.khronos.egl.EGL10;
 import javax.microedition.khronos.egl.EGLConfig;
 import javax.microedition.khronos.egl.EGLContext;
 import javax.microedition.khronos.egl.EGLDisplay;
-import android.annotation.TargetApi;
 import android.content.Context;
 import android.graphics.PixelFormat;
 import android.opengl.GLSurfaceView;
@@ -86,21 +85,17 @@ public class GLSurfaceView20 extends GLSurfaceView {
 		BaseInputConnection connection = new BaseInputConnection(this, false) {
 			@Override
 			public boolean deleteSurroundingText (int beforeLength, int afterLength) {
-				int sdkVersion = android.os.Build.VERSION.SDK_INT;
-				if (sdkVersion >= 16) {
-					/*
-					 * In Jelly Bean, they don't send key events for delete. Instead, they send beforeLength = 1, afterLength = 0. So,
-					 * we'll just simulate what it used to do.
-					 */
-					if (beforeLength == 1 && afterLength == 0) {
-						sendDownUpKeyEventForBackwardCompatibility(KeyEvent.KEYCODE_DEL);
-						return true;
-					}
+				/*
+				 * In Jelly Bean, they don't send key events for delete. Instead, they send beforeLength = 1, afterLength = 0. So,
+				 * we'll just simulate what it used to do.
+				 */
+				if (beforeLength == 1 && afterLength == 0) {
+					sendDownUpKeyEventForBackwardCompatibility(KeyEvent.KEYCODE_DEL);
+					return true;
 				}
 				return super.deleteSurroundingText(beforeLength, afterLength);
 			}
 
-			@TargetApi(16)
 			private void sendDownUpKeyEventForBackwardCompatibility (final int code) {
 				final long eventTime = SystemClock.uptimeMillis();
 				super.sendKeyEvent(new KeyEvent(eventTime, eventTime, KeyEvent.ACTION_DOWN, code, 0, 0,
