@@ -27,7 +27,7 @@ public class DependencyBank {
 	static String roboVMVersion = "2.3.20";
 	static String buildToolsVersion = "33.0.2";
 	static String androidAPILevel = "33";
-	static String androidMinAPILevel = "14";
+	static String androidMinAPILevel = "19";
 	static String gwtVersion = "2.10.0";
 
 	// Repositories
