@@ -38,7 +38,7 @@ versions.androidPlugin = "8.1.2"
 versions.multiDex = "2.0.1"
 versions.androidCompileSdk = 33
 versions.androidTargetSdk = 33
-versions.androidMinSdk = 14
+versions.androidMinSdk = 19
 versions.androidBuildTools = "33.0.2"
 versions.androidFragment = "1.5.7"
 versions.javaparser = "2.3.0"
