@@ -16,7 +16,6 @@
 
 package com.badlogic.gdx.tests.android;
 
-import android.annotation.TargetApi;
 import android.util.Log;
 
 import com.badlogic.gdx.ApplicationListener;
@@ -24,7 +23,6 @@ import com.badlogic.gdx.backends.android.AndroidApplicationConfiguration;
 import com.badlogic.gdx.backends.android.AndroidDaydream;
 import com.badlogic.gdx.tests.MeshShaderTest;
 
-@TargetApi(17)
 public class Daydream extends AndroidDaydream {
 	@Override
 	public void onAttachedToWindow () {
