@@ -1,5 +1,6 @@
 [1.12.2-SNAPSHOT]
 - [BREAKING CHANGE] GWT: Updated to 2.10.0. `com.google.jsinterop:jsinterop-annotations:2.0.2:sources` must be added as a dependency to your html project dependencies.
+- [BREAKING CHANGE] Android: Minimum API level is now level 19 (Android 4.4)
 - Fixed GlyphLayout for fixed width glyph offsets at the start and end of lines.
 - Fixed scene2d.ui layout for fractional positions and sizes.
 - libGDX is now built using Java 17 due to Gradle 8 requirements.
